# Reddit-Options-Trader-ROT-

./: README.md  pyproject.toml
src/rot/: __init__.py
src/rot/app/: loop.py  main.py  runner.py
src/rot/core/: logging.py
src/rot/extract/: event_builder.py
src/rot/market/: enricher.py  symbol_validator.py  symbols.py
src/rot/trend/: ranker.py  ticker_ranker.py
storage/: events.jsonl  market_cache.json  reasoning.jsonl  seen_posts.json  snapshots.jsonl  symbol_cache.json  symbol_valid_cache.json  symbols.csv  top_signals.jsonl  top_ticker_signals.jsonl  trade_ideas.jsonl  trend_candidates.jsonl
